# ellpack-spmv

./: .gitmodules  CMakeLists.txt  README.md  main
VSCode/: launch.json
inputs/: test_basic_mat_in.txt  test_basic_vec_in.txt
inputs/Materials Problem/: test_vec_130_ones_in.txt  test_vec_130_random_in.txt  test_vec_130_zeros_in.txt
inputs/SquareDiagonal/: ash292.mtx  ash85.mtx
matrix_formats/: AbstractMatrixFormat.h  BSR.cpp  BasicMatrixFormat.cpp  CSR.cpp  CSR2.cpp  DDDNaive.cpp  ELL copy.cpp  ELL.cpp  ELLvector.cpp  ELLvectorOpenMP.cpp  b.cpp  benchmarking.cpp  c.cpp  initi_mainfromfile.cpp  main  mainfromfile.cpp  vecchio.cpp
matrix_formats/MPI/: AbstractFormatDistributed.h  DDDNaiveDistributed.cpp  Makefile  euler.sh  main.cpp
test/: all_test.cpp
utils/: generate_diag_matrix.py
